:bug: Fixed wrapping on contact page

--- a/assets/styles/pages/_contact.scss
+++ b/assets/styles/pages/_contact.scss
@@ -38,6 +38,7 @@
   .info-container {
     background: #d16666;
     color: #FCFAE8;
+    overflow-wrap: anywhere;
 
     p {
       margin: 0;
